// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component testing Tabs 1`] = `
<DocumentFragment>
  <div
    class="sc-hKMtZM gZcLXw"
  >
    <div
      class="sc-iBkjds cNETuX"
      style="left: 0px; width: 0px;"
    />
    <div
      class="sc-eCYdqJ"
    >
      <button
        class="sc-jSMfEi enDSTx"
        tabindex="0"
        value="hoge"
      >
        <div
          class="sc-gsnTZi bCRCvk"
          display="flex"
        >
          <p
            class="sc-dkzDqf fEWhKk sc-gKXOVf cNBPuO"
            color="#041C33"
            font-size="14px"
          >
            hoge 
          </p>
        </div>
      </button>
      <button
        class="sc-jSMfEi cMzhBZ"
        tabindex="-1"
        value="fuga"
      >
        <div
          class="sc-gsnTZi bCRCvk"
          display="flex"
        >
          <p
            class="sc-dkzDqf fEWhKk sc-gKXOVf dhvuZW"
            color="#041C33"
            font-size="14px"
          >
            fuga 
          </p>
        </div>
      </button>
      <div
        class="sc-ftvSup dUdnnF"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component testing Tabs with badge 1`] = `
<DocumentFragment>
  <div
    class="sc-hKMtZM gZcLXw"
  >
    <div
      class="sc-iBkjds cNETuX"
      style="left: 0px; width: 0px;"
    />
    <div
      class="sc-eCYdqJ"
    >
      <button
        class="sc-jSMfEi enDSTx"
        tabindex="0"
        value="hoge"
      >
        <div
          class="sc-gsnTZi llJioq"
          display="flex"
        >
          <p
            class="sc-dkzDqf fEWhKk sc-gKXOVf cNBPuO"
            color="#041C33"
            font-size="14px"
          >
            hoge 
          </p>
          <span
            class="sc-bczRLJ jZZUKS"
            color="#FFFFFF"
            font-size="0.65em"
            font-weight="bold"
            type="pill"
          >
            1
          </span>
        </div>
      </button>
      <button
        class="sc-jSMfEi cMzhBZ"
        tabindex="-1"
        value="fuga"
      >
        <div
          class="sc-gsnTZi llJioq"
          display="flex"
        >
          <p
            class="sc-dkzDqf fEWhKk sc-gKXOVf dhvuZW"
            color="#041C33"
            font-size="14px"
          >
            fuga 
          </p>
          <span
            class="sc-bczRLJ cxAKVN"
            color="#FFFFFF"
            font-size="0.65em"
            font-weight="bold"
            type="pill"
          >
            2
          </span>
        </div>
      </button>
      <button
        class="sc-jSMfEi cMzhBZ"
        tabindex="-1"
        value="piyo"
      >
        <div
          class="sc-gsnTZi llJioq"
          display="flex"
        >
          <p
            class="sc-dkzDqf fEWhKk sc-gKXOVf dhvuZW"
            color="#041C33"
            font-size="14px"
          >
            piyo 
          </p>
          <span
            class="sc-bczRLJ cxAKVN"
            color="#FFFFFF"
            font-size="0.65em"
            font-weight="bold"
            type="pill"
          >
            3
          </span>
        </div>
      </button>
      <div
        class="sc-ftvSup dUdnnF"
      />
    </div>
  </div>
</DocumentFragment>
`;
